--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "client-query": "^0.1.3",
+    "fs": "0.0.1-security",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -34,7 +36,7 @@
     "babel-loader": "8.1.0",
     "dotenv": "^2.0.0",
     "express": "^4.17.1",
-    "pg": "^8.5.0",
+    "pg": "^8.10.0",
     "sass": "^1.53.0"
   },
   "jest": {
