--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:8001",
   "dependencies": {
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.2.6",
     "client-query": "^0.1.3",
     "fs": "0.0.1-security",
