--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "proxy": "http://localhost:8001",
   "dependencies": {
     "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
     "classnames": "^2.2.6",
     "client-query": "^0.1.3",
     "fs": "0.0.1-security",
@@ -41,7 +40,8 @@
     "dotenv": "^2.0.0",
     "express": "^4.17.1",
     "pg": "^8.10.0",
-    "sass": "^1.53.0"
+    "sass": "^1.39.2",
+    "react-bootstrap": "^2.7.2"
   },
   "jest": {
     "watchPathIgnorePatterns": [
