--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fs": "0.0.1-security",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^2.7.2",
     "react-context-api": "^1.0.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^6.9.0",
