--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:8001",
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "classnames": "^2.2.6",
