--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "proxy": "http://localhost:8001",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.0",
     "axios": "^1.3.4",
@@ -16,7 +19,6 @@
     "react-bootstrap": "^2.7.2",
     "react-context-api": "^1.0.2",
     "react-dom": "^16.9.0",
-    "react-native-reanimated": "^3.0.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "3.4.4",
     "stripe": "^11.16.0"
